src/main.scss
$main-color-red: #E3170A;
$main-color-black: #011827;
$main-color-grey: #B6BDB5;
$main-color-darkblue: #36769D;
$main-color-lightblue: #8ACFE5;
$main-color-white: #FFFFFF;
$mobile-screen-breakpoint: 640px;

@import 'mixins.scss';
@import 'button-classes.scss';

html {
    @include font-style-regular;
}

body {
    background-color: $main-color-black;

    a {
        color: $main-color-white;
        text-decoration: none;
    }
}

.container {
    max-width: 1280px;
    margin: 5px auto;

    @include mobile-screen {
        // max-width: auto;
        // margin: 0 auto;
    }
}


.header {
    background-color: $main-color-black;
    color: $main-color-white;
    display: flex;

    img {
        width: 128px;
        height: 82px;
        margin: 1em;
    }
    .brandname {
        display: flex;
        align-items: flex-end;
        font-size: 1.4em;
    }

    @include mobile-screen {
        .brandname {
            font-size: 1rem;
            padding-right: 3rem;
        }
    }
}

.navbar {
    background-color: $main-color-black;
    color: $main-color-white;
    margin: 0;
    padding: 0;

    ul {
        display:flex;
        margin: 0;
        justify-content: center;
    }

    li {
        list-style-type: none;
        padding: 1rem;
    }

    @include mobile-screen {
        display: none;
    }
}

.hero {
    background-color: $main-color-white;
    position: relative;
    display: flex;

    img {
        width: 100%;
        max-height: 100%;
    }

    .play-buttons {
        position: absolute;
        max-width: 27rem;
        min-width: 13.5rem;
        left: 0;
        right: 0;
        margin: auto;
        bottom: -0.5rem;
    }

    @include mobile-screen {
       
        .img {
            
        }
        .play-buttons {
            a {
                display: inline-block;
            }
        }
    }

}
.testimonials {
    margin: 0;
    padding: 5rem 0;
    background-color: $main-color-white;
    display: flex;

    > * {
        flex-basis: 50%;
        img {
            float: left;
        }
        blockquote {
            @include font-style-italic;
            font-weight: 400;
            display:flex;
            flex-direction: column;
            margin-top: 0;
            margin-right: 0;
            padding: 0 1rem;
        }
        figcaption {
            font-size: 0.75rem;
            font-style: normal;
            padding-top: 0.5rem;
        }
    }
    .first {
        padding-left: 4rem;
    }
    .second > img {
        padding-left: 0rem;
    }

    @include mobile-screen {
        display: inline-block;
        margin: 0;
        padding: 0;
        .first {
            margin: 0;
            padding: 0;
            img {
                transform: scale(0.75);
            }
            blockquote {
                padding: 0;
                margin: 1rem 1rem 1rem 0;
            }
        }
        .second {
            display: none;
        }
    }
}


.popular-challenges {
    display: block;
    background-color: $main-color-white;
    padding: 0;
    margin: 0;
    h1 {
        display: block;
        text-align: center;
        font-size: 1.5rem;
        padding: 3rem;
        margin: 0;
    }

    .challanges {
        display: flex;
        justify-content: space-evenly;

        .card {
            @include card;
            display: grid;
            grid-template-rows: 50% 50%;
            * {
                grid-row: span 1;
            }

            .room-pic {
                background-image: url('img/hero.png');
                background-repeat: no-repeat;
                background-size: cover;
                height: 223px;
            }

            .room-content {
                padding: 0.83rem;
                position: relative;
                .room-name {
                    font-size: 1.16rem;
                    color: black;
                    }
                .second-row {
                    font-size: 0.7rem;
                    display: flex;
                    justify-content: space-between;
                    padding-bottom: 0.2em;
                    .review {
                        color: $main-color-red;
                    
                    }
                    .participants {
                    } 
                }
                .room-info  {
                    font-size: 0.64rem;
                }
                .book-room {
                    position: absolute;
                    right: 1%;
                    bottom: 0.75em;
                    a {
                        font-size: 0.75rem;
                    }
                }
            }
        }
    }
    
    ul {
        display: flex;
        justify-content: center;
        padding: 4em;
        
        li {
            list-style-type: none;
        }
    }

    @include mobile-screen {
        h1 {
            margin: 0;
            padding: 1rem 0;
            font-size: 1rem;
        }
        .challenges {
            display: flex;
            flex-wrap: nowrap;
            overflow-x: auto;
            .card {
                flex: 0 0 auto;
                // display: inline-block;
            }
        }
    }

}

.story {
    background-color:$main-color-black;

    margin: 0;
    padding: 4rem;
    display: flex;
    flex-direction: column;
    align-items: center;

    blockquote {
        text-align:center;
        color: $main-color-white;
        font-size: 1.16rem;
        padding: 0 8rem;
    }

    a {
        // ska sätta nåt här
    }
}

.play-grid {
    display: flex;
    flex-wrap: wrap;
    * {
        flex: 1 1 50%;
    }

    img {
        width: 100%;
        height: 100%;
    }

    .play-onsite-content, .play-online-content {
        background-color: $main-color-white;
        * {
            display: flex;
            flex-direction: column;
            margin: 0 4rem;
        }
        h2 {
            font-size: 32px;
            margin-top: 3rem;
        }
        span {
            font-size: 1rem;
            margin-top: 1rem;
        }
        a {
            display: inline-block;
            margin-top: 1rem;
        }
    }
}

.footer {

    background-color: $main-color-black;
    color: $main-color-white;
    font-size: 0.75rem;
    display: flex;
    padding: 4rem;

    .about-esc {
        // margin-right: 2rem;
        padding-right: 6rem;
    }

    .sitemap {
        white-space: nowrap;
        margin: 0 3rem;
        padding: 0;
        
    }

    .follow-us {
        margin: 0 3rem;
        padding: 0;
    }

    ul {
        list-style-type: none;
        h4 {
            margin-bottom: 5px;
        }

    }
    @include mobile-screen {
        flex-direction: column;
        padding: 0;
        margin: 0;
        * > {
            flex-basis: 100%;
            margin: 0;
            padding: 0;
        }
        .about-esc {
            margin: 0;
            padding: 0;
        }
        .sitemap {
            margin: 0;
            padding: 0;
        }
        .follow-us {
            margin: 0;
            padding: 0;

        }
    }
    
}

